--- a/gearlist.css
+++ b/gearlist.css
@@ -1,92 +1,144 @@
 body{
-  width: 100%;
-  height: 100vh;
-  margin: auto;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-image: url("/assets/123 (1).png");
-  position: relative;
-  color: white;
+   width:100%;
+   height:100%;
+  font-family: "Shrikhand", cursive;
 }
-.grid-container {
-  display: grid;
-  grid-template-columns: 0.15fr 10px 0.835fr;
-  grid-template-rows: auto 20px auto 20px auto 20px auto;
-  margin-left: 4%;
-  margin-top: 2.5%;
-  height: auto;
+div.menu{
+  
+   margin: 5%;
+   background: transparent;
+}
+.targetDiv{
+  left: 20%;
+padding: 15px 15px 15px 15px;
+border-radius: 30px;
+border-width: 3px; 
+border-bottom-style: groove;
+border-top-style: groove;
+border-right-style: groove;
+border-left-style: groove;
+background-color: #d18434;
+border-color: black;
+  font-size: 25px;
+}
+.targetDiv:nth-child(odd){
+    left: 20%;
+padding: 15px 15px 15px 15px;
+border-radius: 30px;
+border-width: 3px; 
+border-bottom-style: groove;
+border-top-style: groove;
+border-right-style: groove;
+border-left-style: groove;
+background-color: #d18434;
+border-color: black;
+  font-size: 25px;
+}
+.targetDiv:nth-child(even){
+    left: 20%;
+padding: 15px 15px 15px 15px;
+border-radius: 30px;
+border-width: 3px; 
+border-bottom-style: groove;
+border-top-style: groove;
+border-right-style: groove;
+border-left-style: groove;
+background-color: #4c8569;
+border-color: black;
+  font-size: 25px;
+}
+a, #showall{
+   display:inline-block;
+   margin:0 1%;
+   padding:2%;
+   border-radius: 10%;
+   -webkit-box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.2);
+   -moz-box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.2);
+   box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.2);
+  background:#4c8569; 
+   color: #eee;
+}
+a, #hideall{
+   display:inline-block;
+   margin:0 1%;
+   padding:2%;
+   border-radius: 10%;
+   -webkit-box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.2);
+   -moz-box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.2);
+   box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.2);
+  background:red ;
+   color: #eee;
+}
+a, #showsingle{
+   display:inline-block;
+   margin:0 1%;
+   padding:2%;
+   border-radius: 10%;
+   -webkit-box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.2);
+   -moz-box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.2);
+   box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.2);
+  background:black; 
+   color: #eee;
 }
 
-.grid-element {
-  padding: 20px;
-  font-size: 2em;
+
+
+.cnt{
+   
+   background: transparent;
+}
+.columns ul {
+  list-style-type: none;
+  height: auto;
+  max-height: 950px;
+  width: 100%;
+}
+
+.columns ul li{
+  padding: 5px;
+  margin: 5px 10px 5px;
+}
+
+.columns.flex-columns ul {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.columns.css-columns ul {
+  column-count: 3;
+}
+
+.content .container{
+    
+    width: 75% !important;
+    height: auto;
+    margin: auto;
+    padding: auto;
+    display: block;
+}
+.some-box {
+  padding: 2px 0px 80px;
+
+  z-index: 400;
+  overflow-y: scroll;
+  height: 88vh;
+  width: 100%;
+  margin-top: 2%;
   font-family: "Shrikhand", cursive;
   color: #000000;
-/*  -webkit-text-stroke-width: 2.5px;
-  -webkit-text-stroke-color: #000000;
-  font-weight: bold;*/
+  align-items: center;
 }
-.header {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 2;
-
-  
+.content2{
+    display: flex;
+    position: relative;
+    padding-bottom: 3%;
 }
-
-.sidebar {
-  grid-column-start: 1;
-  grid-column-end: 1.5;
-  grid-row-start: 3;
-  grid-row-end: 6;
-  /**border-style: solid;
-  border-color: #EB4A2C;*/
-  
+.content2 .container{
+    
+    width: 75%;
+    height: auto;
+    margin: auto;
+    padding: auto;
+    display: block;
 }
-
-.main {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row-start: 3;
-  grid-row-end: 4;
-  
-  height:400px;
-  columns: 2;
-
-  font-size: 1.25em;
-}
-.main-1-col{
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row-start: 3;
-  grid-row-end: 4;
-  
-  height:400px;
-  font-size: 1.25em;
-}
-
-.extra {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row-start: 5;
-  grid-row-end: 6;
-  
-}
-
-.footer {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 7;
-  grid-row-end: 8;
-  
-}
-h1{
-  text-align: center;
-  font-family: "Shrikhand", cursive;
-  color: #EB4A2C;
-}
-
-
-
-
